objects/Cloud_Phase_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Account_1__c</fullName>
        <formula>Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Cloud_Billing_Phase__r.Cloud_Billing_Information__r.Account_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cloud Phase Line Items</relationshipLabel>
        <relationshipName>Cloud_Phase_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adjusted_Revenue__c</fullName>
        <label>Adjusted Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>April_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-4-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-4-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>April 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aug_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-8-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-8-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Aug 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cloud_Billing_Phase__c</fullName>
        <label>Cloud Billing Phase</label>
        <referenceTo>Cloud_Billing_Phase__c</referenceTo>
        <relationshipLabel>Cloud Phase Line Items</relationshipLabel>
        <relationshipName>Cloud_Phase_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Dec_2015__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2015-12-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2015-12-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec 2015</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dec_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-12-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-12-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dec 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feb_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-2-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-2-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feb 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jan_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-1-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-1-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 
 Quantity__c,  0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Jan 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>July_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-7-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-7-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>July 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>June_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-6-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-6-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>June 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Main_Opportunity__c</fullName>
        <formula>Cloud_Billing_Phase__r.Cloud_Billing_Information__r.Main_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Main Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>March_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-3-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-3-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>March 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>May_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-5-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-5-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>May 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price_One_Time__c</fullName>
        <label>Net Unit Price One Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Unit_Price__c</fullName>
        <label>Net Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-11-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-11-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nov 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oct_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-10-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-10-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oct 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_1__c</fullName>
        <formula>Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <formula>Cloud_Billing_Phase__r.Cloud_Billing_Information__r.Opportunity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PS_Total__c</fullName>
        <label>PS Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phase_Classification__c</fullName>
        <formula>text(Cloud_Billing_Phase__r.Phase_Classification__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase Classification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phase_Go_Live_Date__c</fullName>
        <formula>Cloud_Billing_Phase__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase Go Live Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase_Name__c</fullName>
        <formula>Cloud_Billing_Phase__r.Phase_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phase Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>IF(Product__c == NULL,   Quote_Product__r.Product__c, Product__r.Description )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Product2.BE__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.Product_Category__c</field>
                <operation>equals</operation>
                <value>Business Edition, Business Edition Cloud, Enterprise Edition Cloud</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Cloud Phase Line Items</relationshipLabel>
        <relationshipName>Cloud_Phase_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quote Product</label>
        <referenceTo>BigMachines__Quote_Product__c</referenceTo>
        <relationshipLabel>Cloud Phase Line Items</relationshipLabel>
        <relationshipName>Cloud_Phase_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <formula>IF( Quote_Product__c != NULL, Quote_Product__r.Net_Unit_Price__c * Quantity__c ,   Quantity__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sep_2016__c</fullName>
        <formula>if( 
AND 
( 
MONTH( DateValue(&apos;2017-9-1&apos;) ) == MONTH(Phase_Go_Live_Date__c ), 
YEAR( DateValue(&apos;2017-9-1&apos;) ) == YEAR(Phase_Go_Live_Date__c ) 
) 
, 

Quantity__c , 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sep 2017</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Cloud Phase Line Item</label>
    <nameField>
        <label>Cloud Phase Line Items Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cloud Phase Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>